Add useSavings